@@ -1,3 +1,8 @@
+2006-12-18  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Fix: src/kahua-httpd.scm
+	  Fix that applied uri-decode-string to query string twice.
+
 2006-12-17  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Change: configure.ac
